added document generator

--- a/templates/docs/service_component.md.j2
+++ b/templates/docs/service_component.md.j2
@@ -1,9 +1,9 @@
 # Documentation for {{service_component.name}} on {{inventory.target_name}}
 
-| Configuration ||
+|||
 | --- | ---- |
-| Component name | {{service_component.name}} |
-| Application | {{service_component.application | default('Not Defined')}} |
+| *Component name* | {{service_component.name}} |
+| *Application* | {{service_component.application | default('Not Defined')}} |
 | Replicas | {{service_component.replicas | default('1')}} |
 | Image | {{service_component.image}} |
 
