--- a/templates/docs/service_component.md.j2
+++ b/templates/docs/service_component.md.j2
@@ -1,11 +1,10 @@
 # Documentation for {{service_component.name}} on {{inventory.target_name}}
 
-|||
 | --- | ---- |
-| *Component name* | {{service_component.name}} |
-| *Application* | {{service_component.application | default('Not Defined')}} |
-| Replicas | {{service_component.replicas | default('1')}} |
-| Image | {{service_component.image}} |
+| **Component name** | {{service_component.name}} |
+| **Application** | {{service_component.application | default('Not Defined')}} |
+| **Replicas** | {{service_component.replicas | default('1')}} |
+| **Image** | {{service_component.image}} |
 
 {% if service_component.env is defined %}
 | ENV | VALUE |
