--- a/templates/docs/service_component.md.j2
+++ b/templates/docs/service_component.md.j2
@@ -10,11 +10,13 @@
 {% if service_component.env is defined %}
 | ENV | VALUE |
 | --- | -----  |
-{% for env in service_component.env  %}
+{% for env in service_component.env | sort  %}
 {% set env_value = service_component.env[env] %}
 {% if env_value is mapping %}
 {% if env_value.secretKeyRef is defined %}
 |{{env}} | taken from secret with key: ``{{env_value.secretKeyRef.key}}``|
+{% elif env_value.configMapKeyRef is defined %}
+|{{env}} | taken from config map with key: ``{{env_value.configMapKeyRef.key}}``|
 {% else  %}
 |{{env}} | UNMATCHED {{env_value}}|
 {% endif %}
