--- a/.kapitan.jinja
+++ b/.kapitan.jinja
@@ -1,4 +1,7 @@
-version: {{kapitan_version}}
+# This file contains default settings for Kapitan
+
+# Use version to fix a specific kapitan version
+# version: {{kapitan_version}}
 compile:
   prune: true
   embed-refs: true
