--- a/.kapitan.jinja
+++ b/.kapitan.jinja
@@ -1,8 +1,13 @@
+# This file contains default settings for Kapitan
+
+# Use version to fix a specific kapitan version
+# version: {{kapitan_version}}
 compile:
   prune: true
   embed-refs: true
   fetch: true
   yaml-dump-null-as-empty: true
+  compose-node-name: true
   refs-path: ./system/refs
   jinja2-filters: ./system/templates/jinja2_filters.py
   search-paths:
